@@ -1,3 +1,9 @@
+2008-10-06  Alan McGovern <amcgovern@novell.com> 
+
+	* NetworkIO.cs: Don't sync to the mainloop between each call to
+	  send/receive. Only sync when the entire message has been
+	  sent/received.
+
 2008-03-29  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* Tracker/TrackerFactory.cs: Added try/catch to prevent an invalid address
